tests/integration/sampleSupportBundle/yamls/cluster/admissionregistration.k8s.io/v1/validatingwebhookconfigurations.yaml
apiVersion: v1
items:
- apiVersion: admissionregistration.k8s.io/v1
  kind: ValidatingWebhookConfiguration
  metadata:
    annotations:
      objectset.rio.cattle.io/applied: H4sIAAAAAAAA/8SVz27jRgzGX6XgWf6jeIvdFdBD4zgF3GCxa0c5JMiBGlEWq9GMMEPJCAy/ezG2Y9TOqjV6SI4iQX4/fqSkDdQkmKMgJBtAY6ygsDU+PNrsL1LiSYaO7VChiKYh2xHnkABEvXm7NuQGq66CBEZdHP3yJ5v8tyUpR/KfZQZrggRKdB15ITdYU1ZaWw0UXlTrG1SnDfyLF6phG4FytJvunmvygnUDiWm1jkBjRvpfZy7Rl5BAkX8mnGRjvKKrOL7K1CTDSfyVvtBnwl8nVHyd5DRWGNTeTNKh5hzFupA9jOUhedoA5jV7z9YsqGNaP5Dz+yU8QRdDBF2ckWAMzxEozWRkak3BqwCs8Lo1uQ5Kd8ux3C3j6SLN5/d8fbN4mKfL9HH+Y3ybLna5sUyreL5M52uqvt38eEhfHse3k2U6v34c6ylE4Ml1HPzbvMU/EMN+s [...]
      objectset.rio.cattle.io/id: "null"
      objectset.rio.cattle.io/owner-gvk: /v1, Kind=Secret
      objectset.rio.cattle.io/owner-name: harvester-webhook-ca
      objectset.rio.cattle.io/owner-namespace: harvester-system
    creationTimestamp: "2022-03-06T22:53:25Z"
    generation: 1
    labels:
      objectset.rio.cattle.io/hash: fd7ea3b0a2e2112bc3ba319e8e7ea53ef93de0ca
    managedFields:
    - apiVersion: admissionregistration.k8s.io/v1
      fieldsType: FieldsV1
      fieldsV1:
        f:metadata:
          f:annotations:
            .: {}
            f:objectset.rio.cattle.io/applied: {}
            f:objectset.rio.cattle.io/id: {}
            f:objectset.rio.cattle.io/owner-gvk: {}
            f:objectset.rio.cattle.io/owner-name: {}
            f:objectset.rio.cattle.io/owner-namespace: {}
          f:labels:
            .: {}
            f:objectset.rio.cattle.io/hash: {}
        f:webhooks:
          .: {}
          k:{"name":"validator.harvesterhci.io"}:
            .: {}
            f:admissionReviewVersions: {}
            f:clientConfig:
              .: {}
              f:caBundle: {}
              f:service:
                .: {}
                f:name: {}
                f:namespace: {}
                f:path: {}
                f:port: {}
            f:failurePolicy: {}
            f:matchPolicy: {}
            f:name: {}
            f:namespaceSelector: {}
            f:objectSelector: {}
            f:rules: {}
            f:sideEffects: {}
            f:timeoutSeconds: {}
      manager: harvester-webhook
      operation: Update
      time: "2022-03-06T22:53:25Z"
    name: harvester-validator
    resourceVersion: "6244"
    uid: d725e3a0-0e24-4e17-80a8-f3e95f4ff329
  webhooks:
  - admissionReviewVersions:
    - v1
    - v1beta1
    clientConfig:
      caBundle: LS0tLS1CRUdJTiBDRVJUSUZJQ0FURS0tLS0tCk1JSUJwekNDQVUyZ0F3SUJBZ0lCQURBS0JnZ3Foa2pPUFFRREFqQTdNUnd3R2dZRFZRUUtFeE5rZVc1aGJXbGoKYkdsemRHVnVaWEl0YjNKbk1Sc3dHUVlEVlFRREV4SmtlVzVoYldsamJHbHpkR1Z1WlhJdFkyRXdIaGNOTWpJdwpNekEyTWpJMU1UUTJXaGNOTXpJd016QXpNakkxTVRRMldqQTdNUnd3R2dZRFZRUUtFeE5rZVc1aGJXbGpiR2x6CmRHVnVaWEl0YjNKbk1Sc3dHUVlEVlFRREV4SmtlVzVoYldsamJHbHpkR1Z1WlhJdFkyRXdXVEFUQmdjcWhrak8KUFFJQkJnZ3Foa2pPUFFNQkJ3TkNBQVNNbVRoZGttY0JmSHFzVVFBU2Zha0xwM1F5cE93MVg3VzNvZjJJZWp2ZwpPQTJjcUZ2TktN [...]
      service:
        name: harvester-webhook
        namespace: harvester-system
        path: /v1/webhook/validation
        port: 443
    failurePolicy: Fail
    matchPolicy: Equivalent
    name: validator.harvesterhci.io
    namespaceSelector: {}
    objectSelector: {}
    rules:
    - apiGroups:
      - "null"
      apiVersions:
      - v1
      operations:
      - UPDATE
      resources:
      - nodes
      scope: Cluster
    - apiGroups:
      - k8s.cni.cncf.io
      apiVersions:
      - v1
      operations:
      - CREATE
      - DELETE
      resources:
      - network-attachment-definitions
      scope: Namespaced
    - apiGroups:
      - "null"
      apiVersions:
      - v1
      operations:
      - DELETE
      - UPDATE
      resources:
      - persistentvolumeclaims
      scope: Namespaced
    - apiGroups:
      - harvesterhci.io
      apiVersions:
      - v1beta1
      operations:
      - CREATE
      - UPDATE
      resources:
      - keypairs
      scope: Namespaced
    - apiGroups:
      - kubevirt.io
      apiVersions:
      - v1
      operations:
      - CREATE
      - UPDATE
      resources:
      - virtualmachines
      - virtualmachines/status
      scope: Namespaced
    - apiGroups:
      - harvesterhci.io
      apiVersions:
      - v1beta1
      operations:
      - CREATE
      - UPDATE
      - DELETE
      resources:
      - virtualmachineimages
      scope: Namespaced
    - apiGroups:
      - harvesterhci.io
      apiVersions:
      - v1beta1
      operations:
      - CREATE
      resources:
      - upgrades
      scope: Namespaced
    - apiGroups:
      - harvesterhci.io
      apiVersions:
      - v1beta1
      operations:
      - CREATE
      resources:
      - virtualmachinerestores
      scope: Namespaced
    - apiGroups:
      - harvesterhci.io
      apiVersions:
      - v1beta1
      operations:
      - CREATE
      - UPDATE
      resources:
      - settings
      scope: Cluster
    - apiGroups:
      - harvesterhci.io
      apiVersions:
      - v1beta1
      operations:
      - CREATE
      - UPDATE
      - DELETE
      resources:
      - virtualmachinetemplateversions
      scope: Namespaced
    sideEffects: None
    timeoutSeconds: 10
- apiVersion: admissionregistration.k8s.io/v1
  kind: ValidatingWebhookConfiguration
  metadata:
    annotations:
      meta.helm.sh/release-name: rancher-monitoring
      meta.helm.sh/release-namespace: cattle-monitoring-system
      objectset.rio.cattle.io/id: default-mcc-rancher-monitoring-cattle-fleet-local-system
    creationTimestamp: "2022-03-06T22:52:26Z"
    generation: 178
    labels:
      app: rancher-monitoring-admission
      app.kubernetes.io/instance: rancher-monitoring
      app.kubernetes.io/managed-by: Helm
      app.kubernetes.io/part-of: rancher-monitoring
      app.kubernetes.io/version: 100.1.0_up19.0.3
      chart: rancher-monitoring-100.1.0_up19.0.3
      heritage: Helm
      objectset.rio.cattle.io/hash: a8c87f2d01731fdad3b988f675a7c8a7da10d382
      release: rancher-monitoring
    managedFields:
    - apiVersion: admissionregistration.k8s.io/v1
      fieldsType: FieldsV1
      fieldsV1:
        f:metadata:
          f:annotations:
            .: {}
            f:meta.helm.sh/release-name: {}
            f:meta.helm.sh/release-namespace: {}
            f:objectset.rio.cattle.io/id: {}
          f:labels:
            .: {}
            f:app: {}
            f:app.kubernetes.io/instance: {}
            f:app.kubernetes.io/managed-by: {}
            f:app.kubernetes.io/part-of: {}
            f:app.kubernetes.io/version: {}
            f:chart: {}
            f:heritage: {}
            f:objectset.rio.cattle.io/hash: {}
            f:release: {}
        f:webhooks:
          .: {}
          k:{"name":"prometheusrulemutate.monitoring.coreos.com"}:
            .: {}
            f:admissionReviewVersions: {}
            f:clientConfig:
              .: {}
              f:service:
                .: {}
                f:name: {}
                f:namespace: {}
                f:path: {}
                f:port: {}
            f:matchPolicy: {}
            f:name: {}
            f:namespaceSelector: {}
            f:objectSelector: {}
            f:rules: {}
            f:sideEffects: {}
            f:timeoutSeconds: {}
      manager: fleetagent
      operation: Update
      time: "2022-03-22T18:56:31Z"
    - apiVersion: admissionregistration.k8s.io/v1
      fieldsType: FieldsV1
      fieldsV1:
        f:webhooks:
          k:{"name":"prometheusrulemutate.monitoring.coreos.com"}:
            f:clientConfig:
              f:caBundle: {}
            f:failurePolicy: {}
      manager: kube-webhook-certgen
      operation: Update
      time: "2022-03-22T18:56:48Z"
    name: rancher-monitoring-admission
    resourceVersion: "14474074"
    uid: f613cd4b-b66e-4914-b83f-79683a696e42
  webhooks:
  - admissionReviewVersions:
    - v1
    - v1beta1
    clientConfig:
      caBundle: LS0tLS1CRUdJTiBDRVJUSUZJQ0FURS0tLS0tCk1JSUJkakNDQVJ1Z0F3SUJBZ0lRQVJwd2FyYS8xNmZPQUNMV2NVSjhKVEFLQmdncWhrak9QUVFEQWpBUE1RMHcKQ3dZRFZRUUtFd1J1YVd3eE1DQVhEVEl5TURNd05qSXlORFkxTkZvWUR6SXhNakl3TWpFd01qSTBOalUwV2pBUApNUTB3Q3dZRFZRUUtFd1J1YVd3eE1Ga3dFd1lIS29aSXpqMENBUVlJS29aSXpqMERBUWNEUWdBRXltRHlLWEliCkxkR2toUzVZT0wvblJ1ZjNHUTBtSG9hWEVPVXU2eHNvbFhxVmN3c05BS0lUTWVDS2JGTTFLeWdqMkJTSVBZZXgKL2greEFoUWhBMU9ZUjZOWE1GVXdEZ1lEVlIwUEFRSC9CQVFEQWdJRU1CTUdBMVVkSlFRTU1Bb0dDQ3NHQVFVRgpCd01CTUE4R0Ex [...]
      service:
        name: rancher-monitoring-operator
        namespace: cattle-monitoring-system
        path: /admission-prometheusrules/validate
        port: 443
    failurePolicy: Fail
    matchPolicy: Equivalent
    name: prometheusrulemutate.monitoring.coreos.com
    namespaceSelector: {}
    objectSelector: {}
    rules:
    - apiGroups:
      - monitoring.coreos.com
      apiVersions:
      - '*'
      operations:
      - CREATE
      - UPDATE
      resources:
      - prometheusrules
      scope: '*'
    sideEffects: None
    timeoutSeconds: 10
- apiVersion: admissionregistration.k8s.io/v1
  kind: ValidatingWebhookConfiguration
  metadata:
    annotations:
      meta.helm.sh/release-name: rancher-webhook
      meta.helm.sh/release-namespace: cattle-system
      objectset.rio.cattle.io/applied: H4sIAAAAAAAA/+ySQU/bQBCF/0o154XYdaKCpR6KgaouQhBjDqAcxutxvM1619pdO4qi/Pdq40SlLUk5cOwtmdnxvPfNW0NDDkt0CPEaUCnt0AmtrP+rix/EnSV3aoQ+5eicpFOhR6KEGIAd7OulInMy7xcQw6gP2YfvQpWfM+KG3D/HFDYEMQzlkyUVtdaLE45vGrQt8hfTdmUdNbBhwA1tfT2IhqzDpoVYdVIykFiQPOq2RltDDAFxnCAPJmdVQdWnKirOI6SiOo/wbBziePIxOp8Uk8pv23kwqHhN5te3fG/nyEL8vAYsG2Gt0GpKvaDlIxk7wH+GPgQGfViQwxBmDLgUpFyiVSXmXi7Hi06V0u+5yQJ3k4XJNC/TB3FxOX1M8yx/Su+D63y67QUuWYRplqdLWtxe3j/mq6fgOsry9OIpkAkwsGR64dGt/xC/vwAMrl4HzKBFV [...]
      objectset.rio.cattle.io/id: "null"
      objectset.rio.cattle.io/owner-gvk: /v1, Kind=Secret
      objectset.rio.cattle.io/owner-name: cattle-webhook-ca
      objectset.rio.cattle.io/owner-namespace: cattle-system
    creationTimestamp: "2022-03-06T22:49:30Z"
    generation: 2
    labels:
      app.kubernetes.io/managed-by: Helm
      objectset.rio.cattle.io/hash: 0eca5ac058fbef7f3b93aebf93a841a452395b5f
    managedFields:
    - apiVersion: admissionregistration.k8s.io/v1
      fieldsType: FieldsV1
      fieldsV1:
        f:metadata:
          f:annotations:
            .: {}
            f:meta.helm.sh/release-name: {}
            f:meta.helm.sh/release-namespace: {}
          f:labels:
            .: {}
            f:app.kubernetes.io/managed-by: {}
        f:webhooks:
          .: {}
          k:{"name":"rancher.cattle.io"}:
            .: {}
            f:admissionReviewVersions: {}
            f:clientConfig:
              .: {}
              f:service:
                .: {}
                f:name: {}
                f:namespace: {}
                f:path: {}
                f:port: {}
            f:failurePolicy: {}
            f:matchPolicy: {}
            f:name: {}
            f:namespaceSelector: {}
            f:objectSelector: {}
            f:sideEffects: {}
            f:timeoutSeconds: {}
      manager: helm
      operation: Update
      time: "2022-03-06T22:49:30Z"
    - apiVersion: admissionregistration.k8s.io/v1
      fieldsType: FieldsV1
      fieldsV1:
        f:metadata:
          f:annotations:
            f:objectset.rio.cattle.io/applied: {}
            f:objectset.rio.cattle.io/id: {}
            f:objectset.rio.cattle.io/owner-gvk: {}
            f:objectset.rio.cattle.io/owner-name: {}
            f:objectset.rio.cattle.io/owner-namespace: {}
          f:labels:
            f:objectset.rio.cattle.io/hash: {}
        f:webhooks:
          k:{"name":"rancher.cattle.io"}:
            f:clientConfig:
              f:caBundle: {}
            f:rules: {}
          k:{"name":"rancherauth.cattle.io"}:
            .: {}
            f:admissionReviewVersions: {}
            f:clientConfig:
              .: {}
              f:caBundle: {}
              f:service:
                .: {}
                f:name: {}
                f:namespace: {}
                f:path: {}
                f:port: {}
            f:failurePolicy: {}
            f:matchPolicy: {}
            f:name: {}
            f:namespaceSelector: {}
            f:objectSelector: {}
            f:rules: {}
            f:sideEffects: {}
            f:timeoutSeconds: {}
      manager: webhook
      operation: Update
      time: "2022-03-06T22:49:50Z"
    name: rancher.cattle.io
    resourceVersion: "2429"
    uid: 1b0ec597-7d80-4d5f-aec2-370bc3915e34
  webhooks:
  - admissionReviewVersions:
    - v1
    - v1beta1
    clientConfig:
      caBundle: LS0tLS1CRUdJTiBDRVJUSUZJQ0FURS0tLS0tCk1JSUJwekNDQVUyZ0F3SUJBZ0lCQURBS0JnZ3Foa2pPUFFRREFqQTdNUnd3R2dZRFZRUUtFeE5rZVc1aGJXbGoKYkdsemRHVnVaWEl0YjNKbk1Sc3dHUVlEVlFRREV4SmtlVzVoYldsamJHbHpkR1Z1WlhJdFkyRXdIaGNOTWpJdwpNekEyTWpJME9UTTBXaGNOTXpJd016QXpNakkwT1RNMFdqQTdNUnd3R2dZRFZRUUtFeE5rZVc1aGJXbGpiR2x6CmRHVnVaWEl0YjNKbk1Sc3dHUVlEVlFRREV4SmtlVzVoYldsamJHbHpkR1Z1WlhJdFkyRXdXVEFUQmdjcWhrak8KUFFJQkJnZ3Foa2pPUFFNQkJ3TkNBQVJvZ3ZyTnpGMzZBZlVDSlZjb1BoOEhmVVFrWGRRRldkMTlodkpTa1Z5Sgp4NnE0aWpkckhO [...]
      service:
        name: rancher-webhook
        namespace: cattle-system
        path: /v1/webhook/validation
        port: 443
    failurePolicy: Ignore
    matchPolicy: Equivalent
    name: rancher.cattle.io
    namespaceSelector: {}
    objectSelector: {}
    rules:
    - apiGroups:
      - management.cattle.io
      apiVersions:
      - v3
      operations:
      - CREATE
      - UPDATE
      resources:
      - clusters
      scope: Cluster
    - apiGroups:
      - management.cattle.io
      apiVersions:
      - v3
      operations:
      - UPDATE
      resources:
      - features
      scope: Cluster
    sideEffects: None
    timeoutSeconds: 10
  - admissionReviewVersions:
    - v1
    - v1beta1
    clientConfig:
      caBundle: LS0tLS1CRUdJTiBDRVJUSUZJQ0FURS0tLS0tCk1JSUJwekNDQVUyZ0F3SUJBZ0lCQURBS0JnZ3Foa2pPUFFRREFqQTdNUnd3R2dZRFZRUUtFeE5rZVc1aGJXbGoKYkdsemRHVnVaWEl0YjNKbk1Sc3dHUVlEVlFRREV4SmtlVzVoYldsamJHbHpkR1Z1WlhJdFkyRXdIaGNOTWpJdwpNekEyTWpJME9UTTBXaGNOTXpJd016QXpNakkwT1RNMFdqQTdNUnd3R2dZRFZRUUtFeE5rZVc1aGJXbGpiR2x6CmRHVnVaWEl0YjNKbk1Sc3dHUVlEVlFRREV4SmtlVzVoYldsamJHbHpkR1Z1WlhJdFkyRXdXVEFUQmdjcWhrak8KUFFJQkJnZ3Foa2pPUFFNQkJ3TkNBQVJvZ3ZyTnpGMzZBZlVDSlZjb1BoOEhmVVFrWGRRRldkMTlodkpTa1Z5Sgp4NnE0aWpkckhO [...]
      service:
        name: rancher-webhook
        namespace: cattle-system
        path: /v1/webhook/validation
        port: 443
    failurePolicy: Fail
    matchPolicy: Equivalent
    name: rancherauth.cattle.io
    namespaceSelector: {}
    objectSelector: {}
    rules:
    - apiGroups:
      - provisioning.cattle.io
      apiVersions:
      - v1
      operations:
      - CREATE
      - UPDATE
      resources:
      - clusters
      scope: Namespaced
    sideEffects: None
    timeoutSeconds: 10
- apiVersion: admissionregistration.k8s.io/v1
  kind: ValidatingWebhookConfiguration
  metadata:
    annotations:
      meta.helm.sh/release-name: rke2-ingress-nginx
      meta.helm.sh/release-namespace: kube-system
    creationTimestamp: "2022-03-06T22:48:04Z"
    generation: 2
    labels:
      app.kubernetes.io/component: admission-webhook
      app.kubernetes.io/instance: rke2-ingress-nginx
      app.kubernetes.io/managed-by: Helm
      app.kubernetes.io/name: rke2-ingress-nginx
      app.kubernetes.io/version: 1.0.2
      helm.sh/chart: rke2-ingress-nginx-4.0.306
    managedFields:
    - apiVersion: admissionregistration.k8s.io/v1
      fieldsType: FieldsV1
      fieldsV1:
        f:metadata:
          f:annotations:
            .: {}
            f:meta.helm.sh/release-name: {}
            f:meta.helm.sh/release-namespace: {}
          f:labels:
            .: {}
            f:app.kubernetes.io/component: {}
            f:app.kubernetes.io/instance: {}
            f:app.kubernetes.io/managed-by: {}
            f:app.kubernetes.io/name: {}
            f:app.kubernetes.io/version: {}
            f:helm.sh/chart: {}
        f:webhooks:
          .: {}
          k:{"name":"validate.nginx.ingress.kubernetes.io"}:
            .: {}
            f:admissionReviewVersions: {}
            f:clientConfig:
              .: {}
              f:service:
                .: {}
                f:name: {}
                f:namespace: {}
                f:path: {}
                f:port: {}
            f:failurePolicy: {}
            f:matchPolicy: {}
            f:name: {}
            f:namespaceSelector: {}
            f:objectSelector: {}
            f:rules: {}
            f:sideEffects: {}
            f:timeoutSeconds: {}
      manager: helm
      operation: Update
      time: "2022-03-06T22:48:04Z"
    - apiVersion: admissionregistration.k8s.io/v1
      fieldsType: FieldsV1
      fieldsV1:
        f:webhooks:
          k:{"name":"validate.nginx.ingress.kubernetes.io"}:
            f:clientConfig:
              f:caBundle: {}
      manager: kube-webhook-certgen
      operation: Update
      time: "2022-03-06T22:48:06Z"
    name: rke2-ingress-nginx-admission
    resourceVersion: "1096"
    uid: 16ead3d6-9e3a-4d6f-ba49-75dfdf7cace2
  webhooks:
  - admissionReviewVersions:
    - v1
    clientConfig:
      caBundle: LS0tLS1CRUdJTiBDRVJUSUZJQ0FURS0tLS0tCk1JSUJkekNDQVJ5Z0F3SUJBZ0lSQVBEZFhBMW1paWtCbFcvQnVKcjZTTW93Q2dZSUtvWkl6ajBFQXdJd0R6RU4KTUFzR0ExVUVDaE1FYm1sc01UQWdGdzB5TWpBek1EWXlNalF6TURKYUdBOHlNVEl5TURJeE1ESXlORE13TWxvdwpEekVOTUFzR0ExVUVDaE1FYm1sc01UQlpNQk1HQnlxR1NNNDlBZ0VHQ0NxR1NNNDlBd0VIQTBJQUJGSnlEOUw4ClYybDAxMEt5MXB4eHF3dHpLdjhnMFNLY0pVeWI5UHpmazhzM093dkpxNmtwSXIxYVNmWm4vNktnODZUbmVjL0cKV3hQM1hpSzRBVW16d08yalZ6QlZNQTRHQTFVZER3RUIvd1FFQXdJQ0JEQVRCZ05WSFNVRUREQUtCZ2dyQmdFRgpCUWNEQVRBUEJn [...]
      service:
        name: rke2-ingress-nginx-controller-admission
        namespace: kube-system
        path: /networking/v1/ingresses
        port: 443
    failurePolicy: Fail
    matchPolicy: Equivalent
    name: validate.nginx.ingress.kubernetes.io
    namespaceSelector: {}
    objectSelector: {}
    rules:
    - apiGroups:
      - networking.k8s.io
      apiVersions:
      - v1
      operations:
      - CREATE
      - UPDATE
      resources:
      - ingresses
      scope: '*'
    sideEffects: None
    timeoutSeconds: 10
- apiVersion: admissionregistration.k8s.io/v1
  kind: ValidatingWebhookConfiguration
  metadata:
    annotations:
      objectset.rio.cattle.io/applied: H4sIAAAAAAAA/9yWwU/bMBTG/5d3dgIZdC25TazbbUKIsQPq4dV+JW91bM92Agjlf5/cpKUTGgipm0pPdfPsz9/7frbkR0DH1+QDWwMloKo5pLGnWw7RY2Rr8uUk5GyP2gIELNkoKOEaNSuMbG5/0LyydnluzYJvm34FCKgposKIUD4CGmPjqhDSXzv/STIGirlnm0uMUVPS5yQsvcrueskAnQDpabXyimsKEWsHpWm0FqBxTvpFvQpDBSV8LMYno0JKHOHxaHy6mB/PT84mSp4Wxeh4PBmp8YfibKImaTeDNUEJ7aa7tZdM/tFfJ2Bjsrx5fMrtklqmuyHQVINVam0xp4gFzARIzWRiH1dyH8i3LCkNh93XW64rva3gMM2Cvr8sPIRINQhwGFOXR4NnyqRuQiSf3WfLScjYZm2B2lV4uq5A1wlYIOvG04XVLB+ghC/IOmHDKKvNx [...]
      objectset.rio.cattle.io/id: crd-webhooks
    creationTimestamp: "2022-03-06T22:48:41Z"
    generation: 8
    labels:
      objectset.rio.cattle.io/hash: 617351cca5a0574fb0b398dc41150785d72198d8
    managedFields:
    - apiVersion: admissionregistration.k8s.io/v1
      fieldsType: FieldsV1
      fieldsV1:
        f:metadata:
          f:annotations:
            .: {}
            f:objectset.rio.cattle.io/applied: {}
            f:objectset.rio.cattle.io/id: {}
          f:labels:
            .: {}
            f:objectset.rio.cattle.io/hash: {}
        f:webhooks:
          .: {}
          k:{"name":"validation.cluster.cluster.x-k8s.io"}:
            .: {}
            f:admissionReviewVersions: {}
            f:clientConfig:
              .: {}
              f:caBundle: {}
              f:service:
                .: {}
                f:name: {}
                f:namespace: {}
                f:path: {}
                f:port: {}
            f:failurePolicy: {}
            f:matchPolicy: {}
            f:name: {}
            f:namespaceSelector: {}
            f:objectSelector: {}
            f:rules: {}
            f:sideEffects: {}
            f:timeoutSeconds: {}
          k:{"name":"validation.clusterresourceset.addons.cluster.x-k8s.io"}:
            .: {}
            f:admissionReviewVersions: {}
            f:clientConfig:
              .: {}
              f:caBundle: {}
              f:service:
                .: {}
                f:name: {}
                f:namespace: {}
                f:path: {}
                f:port: {}
            f:failurePolicy: {}
            f:matchPolicy: {}
            f:name: {}
            f:namespaceSelector: {}
            f:objectSelector: {}
            f:rules: {}
            f:sideEffects: {}
            f:timeoutSeconds: {}
          k:{"name":"validation.exp.machinepool.cluster.x-k8s.io"}:
            .: {}
            f:admissionReviewVersions: {}
            f:clientConfig:
              .: {}
              f:caBundle: {}
              f:service:
                .: {}
                f:name: {}
                f:namespace: {}
                f:path: {}
                f:port: {}
            f:failurePolicy: {}
            f:matchPolicy: {}
            f:name: {}
            f:namespaceSelector: {}
            f:objectSelector: {}
            f:rules: {}
            f:sideEffects: {}
            f:timeoutSeconds: {}
          k:{"name":"validation.machine.cluster.x-k8s.io"}:
            .: {}
            f:admissionReviewVersions: {}
            f:clientConfig:
              .: {}
              f:caBundle: {}
              f:service:
                .: {}
                f:name: {}
                f:namespace: {}
                f:path: {}
                f:port: {}
            f:failurePolicy: {}
            f:matchPolicy: {}
            f:name: {}
            f:namespaceSelector: {}
            f:objectSelector: {}
            f:rules: {}
            f:sideEffects: {}
            f:timeoutSeconds: {}
          k:{"name":"validation.machinedeployment.cluster.x-k8s.io"}:
            .: {}
            f:admissionReviewVersions: {}
            f:clientConfig:
              .: {}
              f:caBundle: {}
              f:service:
                .: {}
                f:name: {}
                f:namespace: {}
                f:path: {}
                f:port: {}
            f:failurePolicy: {}
            f:matchPolicy: {}
            f:name: {}
            f:namespaceSelector: {}
            f:objectSelector: {}
            f:rules: {}
            f:sideEffects: {}
            f:timeoutSeconds: {}
          k:{"name":"validation.machinehealthcheck.cluster.x-k8s.io"}:
            .: {}
            f:admissionReviewVersions: {}
            f:clientConfig:
              .: {}
              f:caBundle: {}
              f:service:
                .: {}
                f:name: {}
                f:namespace: {}
                f:path: {}
                f:port: {}
            f:failurePolicy: {}
            f:matchPolicy: {}
            f:name: {}
            f:namespaceSelector: {}
            f:objectSelector: {}
            f:rules: {}
            f:sideEffects: {}
            f:timeoutSeconds: {}
          k:{"name":"validation.machineset.cluster.x-k8s.io"}:
            .: {}
            f:admissionReviewVersions: {}
            f:clientConfig:
              .: {}
              f:caBundle: {}
              f:service:
                .: {}
                f:name: {}
                f:namespace: {}
                f:path: {}
                f:port: {}
            f:failurePolicy: {}
            f:matchPolicy: {}
            f:name: {}
            f:namespaceSelector: {}
            f:objectSelector: {}
            f:rules: {}
            f:sideEffects: {}
            f:timeoutSeconds: {}
      manager: rancher
      operation: Update
      time: "2022-03-06T22:50:02Z"
    name: validating-webhook-configuration
    resourceVersion: "2573"
    uid: 5da2245f-4fba-4108-b746-d272fdb51704
  webhooks:
  - admissionReviewVersions:
    - v1
    - v1beta1
    clientConfig:
      caBundle: LS0tLS1CRUdJTiBDRVJUSUZJQ0FURS0tLS0tCk1JSUQ2RENDQXRDZ0F3SUJBZ0lCQWpBTkJna3Foa2lHOXcwQkFRc0ZBREE2TVRnd05nWURWUVFEREM5allYUjAKYkdVdGMzbHpkR1Z0TFhKaGJtTm9aWEl0ZDJWaWFHOXZheTEwYkhNdFkyRkFNVFkwTmpZd05qazNNVEFlRncweQpNakF6TURZeU1UUTVNekJhRncweU16QXpNRFl5TVRRNU16QmFNRGN4TlRBekJnTlZCQU1NTEdOaGRIUnNaUzF6CmVYTjBaVzB0Y21GdVkyaGxjaTEzWldKb2IyOXJMWFJzYzBBeE5qUTJOakEyT1RjeU1JSUJJakFOQmdrcWhraUcKOXcwQkFRRUZBQU9DQVE4QU1JSUJDZ0tDQVFFQXM1b2tjbVgyNVZ6T1RpSUR2d0l3QXhXQVI1ajI1WHBGZEZ1NwpuV2sxSVdpeXJu [...]
      service:
        name: webhook-service
        namespace: cattle-system
        path: /validate-cluster-x-k8s-io-v1alpha4-cluster
        port: 443
    failurePolicy: Fail
    matchPolicy: Equivalent
    name: validation.cluster.cluster.x-k8s.io
    namespaceSelector: {}
    objectSelector: {}
    rules:
    - apiGroups:
      - cluster.x-k8s.io
      apiVersions:
      - v1alpha4
      operations:
      - CREATE
      - UPDATE
      resources:
      - clusters
      scope: '*'
    sideEffects: None
    timeoutSeconds: 10
  - admissionReviewVersions:
    - v1
    - v1beta1
    clientConfig:
      caBundle: LS0tLS1CRUdJTiBDRVJUSUZJQ0FURS0tLS0tCk1JSUQ2RENDQXRDZ0F3SUJBZ0lCQWpBTkJna3Foa2lHOXcwQkFRc0ZBREE2TVRnd05nWURWUVFEREM5allYUjAKYkdVdGMzbHpkR1Z0TFhKaGJtTm9aWEl0ZDJWaWFHOXZheTEwYkhNdFkyRkFNVFkwTmpZd05qazNNVEFlRncweQpNakF6TURZeU1UUTVNekJhRncweU16QXpNRFl5TVRRNU16QmFNRGN4TlRBekJnTlZCQU1NTEdOaGRIUnNaUzF6CmVYTjBaVzB0Y21GdVkyaGxjaTEzWldKb2IyOXJMWFJzYzBBeE5qUTJOakEyT1RjeU1JSUJJakFOQmdrcWhraUcKOXcwQkFRRUZBQU9DQVE4QU1JSUJDZ0tDQVFFQXM1b2tjbVgyNVZ6T1RpSUR2d0l3QXhXQVI1ajI1WHBGZEZ1NwpuV2sxSVdpeXJu [...]
      service:
        name: webhook-service
        namespace: cattle-system
        path: /validate-cluster-x-k8s-io-v1alpha4-machine
        port: 443
    failurePolicy: Fail
    matchPolicy: Equivalent
    name: validation.machine.cluster.x-k8s.io
    namespaceSelector: {}
    objectSelector: {}
    rules:
    - apiGroups:
      - cluster.x-k8s.io
      apiVersions:
      - v1alpha4
      operations:
      - CREATE
      - UPDATE
      resources:
      - machines
      scope: '*'
    sideEffects: None
    timeoutSeconds: 10
  - admissionReviewVersions:
    - v1
    - v1beta1
    clientConfig:
      caBundle: LS0tLS1CRUdJTiBDRVJUSUZJQ0FURS0tLS0tCk1JSUQ2RENDQXRDZ0F3SUJBZ0lCQWpBTkJna3Foa2lHOXcwQkFRc0ZBREE2TVRnd05nWURWUVFEREM5allYUjAKYkdVdGMzbHpkR1Z0TFhKaGJtTm9aWEl0ZDJWaWFHOXZheTEwYkhNdFkyRkFNVFkwTmpZd05qazNNVEFlRncweQpNakF6TURZeU1UUTVNekJhRncweU16QXpNRFl5TVRRNU16QmFNRGN4TlRBekJnTlZCQU1NTEdOaGRIUnNaUzF6CmVYTjBaVzB0Y21GdVkyaGxjaTEzWldKb2IyOXJMWFJzYzBBeE5qUTJOakEyT1RjeU1JSUJJakFOQmdrcWhraUcKOXcwQkFRRUZBQU9DQVE4QU1JSUJDZ0tDQVFFQXM1b2tjbVgyNVZ6T1RpSUR2d0l3QXhXQVI1ajI1WHBGZEZ1NwpuV2sxSVdpeXJu [...]
      service:
        name: webhook-service
        namespace: cattle-system
        path: /validate-cluster-x-k8s-io-v1alpha4-machinedeployment
        port: 443
    failurePolicy: Fail
    matchPolicy: Equivalent
    name: validation.machinedeployment.cluster.x-k8s.io
    namespaceSelector: {}
    objectSelector: {}
    rules:
    - apiGroups:
      - cluster.x-k8s.io
      apiVersions:
      - v1alpha4
      operations:
      - CREATE
      - UPDATE
      resources:
      - machinedeployments
      scope: '*'
    sideEffects: None
    timeoutSeconds: 10
  - admissionReviewVersions:
    - v1
    - v1beta1
    clientConfig:
      caBundle: LS0tLS1CRUdJTiBDRVJUSUZJQ0FURS0tLS0tCk1JSUQ2RENDQXRDZ0F3SUJBZ0lCQWpBTkJna3Foa2lHOXcwQkFRc0ZBREE2TVRnd05nWURWUVFEREM5allYUjAKYkdVdGMzbHpkR1Z0TFhKaGJtTm9aWEl0ZDJWaWFHOXZheTEwYkhNdFkyRkFNVFkwTmpZd05qazNNVEFlRncweQpNakF6TURZeU1UUTVNekJhRncweU16QXpNRFl5TVRRNU16QmFNRGN4TlRBekJnTlZCQU1NTEdOaGRIUnNaUzF6CmVYTjBaVzB0Y21GdVkyaGxjaTEzWldKb2IyOXJMWFJzYzBBeE5qUTJOakEyT1RjeU1JSUJJakFOQmdrcWhraUcKOXcwQkFRRUZBQU9DQVE4QU1JSUJDZ0tDQVFFQXM1b2tjbVgyNVZ6T1RpSUR2d0l3QXhXQVI1ajI1WHBGZEZ1NwpuV2sxSVdpeXJu [...]
      service:
        name: webhook-service
        namespace: cattle-system
        path: /validate-cluster-x-k8s-io-v1alpha4-machinehealthcheck
        port: 443
    failurePolicy: Fail
    matchPolicy: Equivalent
    name: validation.machinehealthcheck.cluster.x-k8s.io
    namespaceSelector: {}
    objectSelector: {}
    rules:
    - apiGroups:
      - cluster.x-k8s.io
      apiVersions:
      - v1alpha4
      operations:
      - CREATE
      - UPDATE
      resources:
      - machinehealthchecks
      scope: '*'
    sideEffects: None
    timeoutSeconds: 10
  - admissionReviewVersions:
    - v1
    - v1beta1
    clientConfig:
      caBundle: LS0tLS1CRUdJTiBDRVJUSUZJQ0FURS0tLS0tCk1JSUQ2RENDQXRDZ0F3SUJBZ0lCQWpBTkJna3Foa2lHOXcwQkFRc0ZBREE2TVRnd05nWURWUVFEREM5allYUjAKYkdVdGMzbHpkR1Z0TFhKaGJtTm9aWEl0ZDJWaWFHOXZheTEwYkhNdFkyRkFNVFkwTmpZd05qazNNVEFlRncweQpNakF6TURZeU1UUTVNekJhRncweU16QXpNRFl5TVRRNU16QmFNRGN4TlRBekJnTlZCQU1NTEdOaGRIUnNaUzF6CmVYTjBaVzB0Y21GdVkyaGxjaTEzWldKb2IyOXJMWFJzYzBBeE5qUTJOakEyT1RjeU1JSUJJakFOQmdrcWhraUcKOXcwQkFRRUZBQU9DQVE4QU1JSUJDZ0tDQVFFQXM1b2tjbVgyNVZ6T1RpSUR2d0l3QXhXQVI1ajI1WHBGZEZ1NwpuV2sxSVdpeXJu [...]
      service:
        name: webhook-service
        namespace: cattle-system
        path: /validate-cluster-x-k8s-io-v1alpha4-machineset
        port: 443
    failurePolicy: Fail
    matchPolicy: Equivalent
    name: validation.machineset.cluster.x-k8s.io
    namespaceSelector: {}
    objectSelector: {}
    rules:
    - apiGroups:
      - cluster.x-k8s.io
      apiVersions:
      - v1alpha4
      operations:
      - CREATE
      - UPDATE
      resources:
      - machinesets
      scope: '*'
    sideEffects: None
    timeoutSeconds: 10
  - admissionReviewVersions:
    - v1
    - v1beta1
    clientConfig:
      caBundle: LS0tLS1CRUdJTiBDRVJUSUZJQ0FURS0tLS0tCk1JSUQ2RENDQXRDZ0F3SUJBZ0lCQWpBTkJna3Foa2lHOXcwQkFRc0ZBREE2TVRnd05nWURWUVFEREM5allYUjAKYkdVdGMzbHpkR1Z0TFhKaGJtTm9aWEl0ZDJWaWFHOXZheTEwYkhNdFkyRkFNVFkwTmpZd05qazNNVEFlRncweQpNakF6TURZeU1UUTVNekJhRncweU16QXpNRFl5TVRRNU16QmFNRGN4TlRBekJnTlZCQU1NTEdOaGRIUnNaUzF6CmVYTjBaVzB0Y21GdVkyaGxjaTEzWldKb2IyOXJMWFJzYzBBeE5qUTJOakEyT1RjeU1JSUJJakFOQmdrcWhraUcKOXcwQkFRRUZBQU9DQVE4QU1JSUJDZ0tDQVFFQXM1b2tjbVgyNVZ6T1RpSUR2d0l3QXhXQVI1ajI1WHBGZEZ1NwpuV2sxSVdpeXJu [...]
      service:
        name: webhook-service
        namespace: cattle-system
        path: /validate-exp-cluster-x-k8s-io-v1alpha4-machinepool
        port: 443
    failurePolicy: Fail
    matchPolicy: Equivalent
    name: validation.exp.machinepool.cluster.x-k8s.io
    namespaceSelector: {}
    objectSelector: {}
    rules:
    - apiGroups:
      - exp.cluster.x-k8s.io
      apiVersions:
      - v1alpha4
      operations:
      - CREATE
      - UPDATE
      resources:
      - machinepools
      scope: '*'
    sideEffects: None
    timeoutSeconds: 10
  - admissionReviewVersions:
    - v1
    - v1beta1
    clientConfig:
      caBundle: LS0tLS1CRUdJTiBDRVJUSUZJQ0FURS0tLS0tCk1JSUQ2RENDQXRDZ0F3SUJBZ0lCQWpBTkJna3Foa2lHOXcwQkFRc0ZBREE2TVRnd05nWURWUVFEREM5allYUjAKYkdVdGMzbHpkR1Z0TFhKaGJtTm9aWEl0ZDJWaWFHOXZheTEwYkhNdFkyRkFNVFkwTmpZd05qazNNVEFlRncweQpNakF6TURZeU1UUTVNekJhRncweU16QXpNRFl5TVRRNU16QmFNRGN4TlRBekJnTlZCQU1NTEdOaGRIUnNaUzF6CmVYTjBaVzB0Y21GdVkyaGxjaTEzWldKb2IyOXJMWFJzYzBBeE5qUTJOakEyT1RjeU1JSUJJakFOQmdrcWhraUcKOXcwQkFRRUZBQU9DQVE4QU1JSUJDZ0tDQVFFQXM1b2tjbVgyNVZ6T1RpSUR2d0l3QXhXQVI1ajI1WHBGZEZ1NwpuV2sxSVdpeXJu [...]
      service:
        name: webhook-service
        namespace: cattle-system
        path: /validate-addons-cluster-x-k8s-io-v1alpha4-clusterresourceset
        port: 443
    failurePolicy: Fail
    matchPolicy: Equivalent
    name: validation.clusterresourceset.addons.cluster.x-k8s.io
    namespaceSelector: {}
    objectSelector: {}
    rules:
    - apiGroups:
      - addons.cluster.x-k8s.io
      apiVersions:
      - v1alpha4
      operations:
      - CREATE
      - UPDATE
      resources:
      - clusterresourcesets
      scope: '*'
    sideEffects: None
    timeoutSeconds: 10
- apiVersion: admissionregistration.k8s.io/v1
  kind: ValidatingWebhookConfiguration
  metadata:
    annotations:
      certificates.kubevirt.io/secret: kubevirt-virt-api-certs
      kubevirt.io/customizer-identifier: 0564c24f745ced6f94bf8fe15c474566be27acf3
      kubevirt.io/generation: "2"
      kubevirt.io/install-strategy-identifier: d3df7f87ee723ed71ca49f6c5cab7566dd4dc500
      kubevirt.io/install-strategy-registry: registry.suse.com/suse/sles/15.3
      kubevirt.io/install-strategy-version: 0.45.0-8.4.3
    creationTimestamp: "2022-03-06T22:52:52Z"
    generation: 5
    labels:
      app.kubernetes.io/component: kubevirt
      app.kubernetes.io/managed-by: kubevirt-operator
      kubevirt.io: virt-api-validator
    managedFields:
    - apiVersion: admissionregistration.k8s.io/v1
      fieldsType: FieldsV1
      fieldsV1:
        f:metadata:
          f:annotations:
            .: {}
            f:certificates.kubevirt.io/secret: {}
            f:kubevirt.io/customizer-identifier: {}
            f:kubevirt.io/generation: {}
            f:kubevirt.io/install-strategy-identifier: {}
            f:kubevirt.io/install-strategy-registry: {}
            f:kubevirt.io/install-strategy-version: {}
          f:labels:
            .: {}
            f:app.kubernetes.io/component: {}
            f:app.kubernetes.io/managed-by: {}
            f:kubevirt.io: {}
        f:webhooks:
          .: {}
          k:{"name":"kubevirt-crd-status-validator.kubevirt.io"}:
            .: {}
            f:admissionReviewVersions: {}
            f:clientConfig:
              .: {}
              f:caBundle: {}
              f:service:
                .: {}
                f:name: {}
                f:namespace: {}
                f:path: {}
                f:port: {}
            f:failurePolicy: {}
            f:matchPolicy: {}
            f:name: {}
            f:namespaceSelector: {}
            f:objectSelector: {}
            f:rules: {}
            f:sideEffects: {}
            f:timeoutSeconds: {}
          k:{"name":"migration-create-validator.kubevirt.io"}:
            .: {}
            f:admissionReviewVersions: {}
            f:clientConfig:
              .: {}
              f:caBundle: {}
              f:service:
                .: {}
                f:name: {}
                f:namespace: {}
                f:path: {}
                f:port: {}
            f:failurePolicy: {}
            f:matchPolicy: {}
            f:name: {}
            f:namespaceSelector: {}
            f:objectSelector: {}
            f:rules: {}
            f:sideEffects: {}
            f:timeoutSeconds: {}
          k:{"name":"migration-update-validator.kubevirt.io"}:
            .: {}
            f:admissionReviewVersions: {}
            f:clientConfig:
              .: {}
              f:caBundle: {}
              f:service:
                .: {}
                f:name: {}
                f:namespace: {}
                f:path: {}
                f:port: {}
            f:failurePolicy: {}
            f:matchPolicy: {}
            f:name: {}
            f:namespaceSelector: {}
            f:objectSelector: {}
            f:rules: {}
            f:sideEffects: {}
            f:timeoutSeconds: {}
          k:{"name":"virt-launcher-eviction-interceptor.kubevirt.io"}:
            .: {}
            f:admissionReviewVersions: {}
            f:clientConfig:
              .: {}
              f:caBundle: {}
              f:service:
                .: {}
                f:name: {}
                f:namespace: {}
                f:path: {}
                f:port: {}
            f:failurePolicy: {}
            f:matchPolicy: {}
            f:name: {}
            f:namespaceSelector: {}
            f:objectSelector: {}
            f:rules: {}
            f:sideEffects: {}
            f:timeoutSeconds: {}
          k:{"name":"virtualmachine-validator.kubevirt.io"}:
            .: {}
            f:admissionReviewVersions: {}
            f:clientConfig:
              .: {}
              f:caBundle: {}
              f:service:
                .: {}
                f:name: {}
                f:namespace: {}
                f:path: {}
                f:port: {}
            f:failurePolicy: {}
            f:matchPolicy: {}
            f:name: {}
            f:namespaceSelector: {}
            f:objectSelector: {}
            f:rules: {}
            f:sideEffects: {}
            f:timeoutSeconds: {}
          k:{"name":"virtualmachineinstances-create-validator.kubevirt.io"}:
            .: {}
            f:admissionReviewVersions: {}
            f:clientConfig:
              .: {}
              f:caBundle: {}
              f:service:
                .: {}
                f:name: {}
                f:namespace: {}
                f:path: {}
                f:port: {}
            f:failurePolicy: {}
            f:matchPolicy: {}
            f:name: {}
            f:namespaceSelector: {}
            f:objectSelector: {}
            f:rules: {}
            f:sideEffects: {}
            f:timeoutSeconds: {}
          k:{"name":"virtualmachineinstances-update-validator.kubevirt.io"}:
            .: {}
            f:admissionReviewVersions: {}
            f:clientConfig:
              .: {}
              f:caBundle: {}
              f:service:
                .: {}
                f:name: {}
                f:namespace: {}
                f:path: {}
                f:port: {}
            f:failurePolicy: {}
            f:matchPolicy: {}
            f:name: {}
            f:namespaceSelector: {}
            f:objectSelector: {}
            f:rules: {}
            f:sideEffects: {}
            f:timeoutSeconds: {}
          k:{"name":"virtualmachinepreset-validator.kubevirt.io"}:
            .: {}
            f:admissionReviewVersions: {}
            f:clientConfig:
              .: {}
              f:caBundle: {}
              f:service:
                .: {}
                f:name: {}
                f:namespace: {}
                f:path: {}
                f:port: {}
            f:failurePolicy: {}
            f:matchPolicy: {}
            f:name: {}
            f:namespaceSelector: {}
            f:objectSelector: {}
            f:rules: {}
            f:sideEffects: {}
            f:timeoutSeconds: {}
          k:{"name":"virtualmachinereplicaset-validator.kubevirt.io"}:
            .: {}
            f:admissionReviewVersions: {}
            f:clientConfig:
              .: {}
              f:caBundle: {}
              f:service:
                .: {}
                f:name: {}
                f:namespace: {}
                f:path: {}
                f:port: {}
            f:failurePolicy: {}
            f:matchPolicy: {}
            f:name: {}
            f:namespaceSelector: {}
            f:objectSelector: {}
            f:rules: {}
            f:sideEffects: {}
            f:timeoutSeconds: {}
          k:{"name":"virtualmachinerestore-validator.snapshot.kubevirt.io"}:
            .: {}
            f:admissionReviewVersions: {}
            f:clientConfig:
              .: {}
              f:caBundle: {}
              f:service:
                .: {}
                f:name: {}
                f:namespace: {}
                f:path: {}
                f:port: {}
            f:failurePolicy: {}
            f:matchPolicy: {}
            f:name: {}
            f:namespaceSelector: {}
            f:objectSelector: {}
            f:rules: {}
            f:sideEffects: {}
            f:timeoutSeconds: {}
          k:{"name":"virtualmachinesnapshot-validator.snapshot.kubevirt.io"}:
            .: {}
            f:admissionReviewVersions: {}
            f:clientConfig:
              .: {}
              f:caBundle: {}
              f:service:
                .: {}
                f:name: {}
                f:namespace: {}
                f:path: {}
                f:port: {}
            f:failurePolicy: {}
            f:matchPolicy: {}
            f:name: {}
            f:namespaceSelector: {}
            f:objectSelector: {}
            f:rules: {}
            f:sideEffects: {}
            f:timeoutSeconds: {}
      manager: virt-operator
      operation: Update
      time: "2022-03-06T22:52:52Z"
    name: virt-api-validator
    resourceVersion: "11716328"
    uid: 44997936-5f99-4a02-a971-69aeb6b58115
  webhooks:
  - admissionReviewVersions:
    - v1
    - v1beta1
    clientConfig:
      caBundle: LS0tLS1CRUdJTiBDRVJUSUZJQ0FURS0tLS0tCk1JSUM2VENDQWRHZ0F3SUJBZ0lCQURBTkJna3Foa2lHOXcwQkFRc0ZBREFXTVJRd0VnWURWUVFERXd0cmRXSmwKZG1seWRDNXBiekFlRncweU1qQXpNVGd3TXpRd05UWmFGdzB5TWpBek1qVXdNelF3TlRaYU1CWXhGREFTQmdOVgpCQU1UQzJ0MVltVjJhWEowTG1sdk1JSUJJakFOQmdrcWhraUc5dzBCQVFFRkFBT0NBUThBTUlJQkNnS0NBUUVBCnJ5WStzaW43bkdpKzdqVk1tQWkyNGh1enZPL0N4NGNjTmxxb2JCcENiVVZPSTlKMkFjdlhJT3d4bHVacVRXdEEKc0tyT0UyemtlV3c5TXQxSGVXT1QyVGNxU0dBVVU4ajNSZ1pFQUk1aHVrRUxQNGR3Z2hPejZCUVljK01xSVlTNwpaSFhMeGI5eVRu [...]
      service:
        name: virt-api
        namespace: harvester-system
        path: /launcher-eviction-validate
        port: 443
    failurePolicy: Ignore
    matchPolicy: Equivalent
    name: virt-launcher-eviction-interceptor.kubevirt.io
    namespaceSelector: {}
    objectSelector: {}
    rules:
    - apiGroups:
      - "null"
      apiVersions:
      - v1
      operations:
      - '*'
      resources:
      - pods/eviction
      scope: '*'
    sideEffects: NoneOnDryRun
    timeoutSeconds: 10
  - admissionReviewVersions:
    - v1
    - v1beta1
    clientConfig:
      caBundle: LS0tLS1CRUdJTiBDRVJUSUZJQ0FURS0tLS0tCk1JSUM2VENDQWRHZ0F3SUJBZ0lCQURBTkJna3Foa2lHOXcwQkFRc0ZBREFXTVJRd0VnWURWUVFERXd0cmRXSmwKZG1seWRDNXBiekFlRncweU1qQXpNVGd3TXpRd05UWmFGdzB5TWpBek1qVXdNelF3TlRaYU1CWXhGREFTQmdOVgpCQU1UQzJ0MVltVjJhWEowTG1sdk1JSUJJakFOQmdrcWhraUc5dzBCQVFFRkFBT0NBUThBTUlJQkNnS0NBUUVBCnJ5WStzaW43bkdpKzdqVk1tQWkyNGh1enZPL0N4NGNjTmxxb2JCcENiVVZPSTlKMkFjdlhJT3d4bHVacVRXdEEKc0tyT0UyemtlV3c5TXQxSGVXT1QyVGNxU0dBVVU4ajNSZ1pFQUk1aHVrRUxQNGR3Z2hPejZCUVljK01xSVlTNwpaSFhMeGI5eVRu [...]
      service:
        name: virt-api
        namespace: harvester-system
        path: /virtualmachineinstances-validate-create
        port: 443
    failurePolicy: Fail
    matchPolicy: Equivalent
    name: virtualmachineinstances-create-validator.kubevirt.io
    namespaceSelector: {}
    objectSelector: {}
    rules:
    - apiGroups:
      - kubevirt.io
      apiVersions:
      - v1alpha3
      - v1
      operations:
      - CREATE
      resources:
      - virtualmachineinstances
      scope: '*'
    sideEffects: None
    timeoutSeconds: 10
  - admissionReviewVersions:
    - v1
    - v1beta1
    clientConfig:
      caBundle: LS0tLS1CRUdJTiBDRVJUSUZJQ0FURS0tLS0tCk1JSUM2VENDQWRHZ0F3SUJBZ0lCQURBTkJna3Foa2lHOXcwQkFRc0ZBREFXTVJRd0VnWURWUVFERXd0cmRXSmwKZG1seWRDNXBiekFlRncweU1qQXpNVGd3TXpRd05UWmFGdzB5TWpBek1qVXdNelF3TlRaYU1CWXhGREFTQmdOVgpCQU1UQzJ0MVltVjJhWEowTG1sdk1JSUJJakFOQmdrcWhraUc5dzBCQVFFRkFBT0NBUThBTUlJQkNnS0NBUUVBCnJ5WStzaW43bkdpKzdqVk1tQWkyNGh1enZPL0N4NGNjTmxxb2JCcENiVVZPSTlKMkFjdlhJT3d4bHVacVRXdEEKc0tyT0UyemtlV3c5TXQxSGVXT1QyVGNxU0dBVVU4ajNSZ1pFQUk1aHVrRUxQNGR3Z2hPejZCUVljK01xSVlTNwpaSFhMeGI5eVRu [...]
      service:
        name: virt-api
        namespace: harvester-system
        path: /virtualmachineinstances-validate-update
        port: 443
    failurePolicy: Fail
    matchPolicy: Equivalent
    name: virtualmachineinstances-update-validator.kubevirt.io
    namespaceSelector: {}
    objectSelector: {}
    rules:
    - apiGroups:
      - kubevirt.io
      apiVersions:
      - v1alpha3
      - v1
      operations:
      - UPDATE
      resources:
      - virtualmachineinstances
      scope: '*'
    sideEffects: None
    timeoutSeconds: 10
  - admissionReviewVersions:
    - v1
    - v1beta1
    clientConfig:
      caBundle: LS0tLS1CRUdJTiBDRVJUSUZJQ0FURS0tLS0tCk1JSUM2VENDQWRHZ0F3SUJBZ0lCQURBTkJna3Foa2lHOXcwQkFRc0ZBREFXTVJRd0VnWURWUVFERXd0cmRXSmwKZG1seWRDNXBiekFlRncweU1qQXpNVGd3TXpRd05UWmFGdzB5TWpBek1qVXdNelF3TlRaYU1CWXhGREFTQmdOVgpCQU1UQzJ0MVltVjJhWEowTG1sdk1JSUJJakFOQmdrcWhraUc5dzBCQVFFRkFBT0NBUThBTUlJQkNnS0NBUUVBCnJ5WStzaW43bkdpKzdqVk1tQWkyNGh1enZPL0N4NGNjTmxxb2JCcENiVVZPSTlKMkFjdlhJT3d4bHVacVRXdEEKc0tyT0UyemtlV3c5TXQxSGVXT1QyVGNxU0dBVVU4ajNSZ1pFQUk1aHVrRUxQNGR3Z2hPejZCUVljK01xSVlTNwpaSFhMeGI5eVRu [...]
      service:
        name: virt-api
        namespace: harvester-system
        path: /virtualmachines-validate
        port: 443
    failurePolicy: Fail
    matchPolicy: Equivalent
    name: virtualmachine-validator.kubevirt.io
    namespaceSelector: {}
    objectSelector: {}
    rules:
    - apiGroups:
      - kubevirt.io
      apiVersions:
      - v1alpha3
      - v1
      operations:
      - CREATE
      - UPDATE
      resources:
      - virtualmachines
      scope: '*'
    sideEffects: None
    timeoutSeconds: 10
  - admissionReviewVersions:
    - v1
    - v1beta1
    clientConfig:
      caBundle: LS0tLS1CRUdJTiBDRVJUSUZJQ0FURS0tLS0tCk1JSUM2VENDQWRHZ0F3SUJBZ0lCQURBTkJna3Foa2lHOXcwQkFRc0ZBREFXTVJRd0VnWURWUVFERXd0cmRXSmwKZG1seWRDNXBiekFlRncweU1qQXpNVGd3TXpRd05UWmFGdzB5TWpBek1qVXdNelF3TlRaYU1CWXhGREFTQmdOVgpCQU1UQzJ0MVltVjJhWEowTG1sdk1JSUJJakFOQmdrcWhraUc5dzBCQVFFRkFBT0NBUThBTUlJQkNnS0NBUUVBCnJ5WStzaW43bkdpKzdqVk1tQWkyNGh1enZPL0N4NGNjTmxxb2JCcENiVVZPSTlKMkFjdlhJT3d4bHVacVRXdEEKc0tyT0UyemtlV3c5TXQxSGVXT1QyVGNxU0dBVVU4ajNSZ1pFQUk1aHVrRUxQNGR3Z2hPejZCUVljK01xSVlTNwpaSFhMeGI5eVRu [...]
      service:
        name: virt-api
        namespace: harvester-system
        path: /virtualmachinereplicaset-validate
        port: 443
    failurePolicy: Fail
    matchPolicy: Equivalent
    name: virtualmachinereplicaset-validator.kubevirt.io
    namespaceSelector: {}
    objectSelector: {}
    rules:
    - apiGroups:
      - kubevirt.io
      apiVersions:
      - v1alpha3
      - v1
      operations:
      - CREATE
      - UPDATE
      resources:
      - virtualmachineinstancereplicasets
      scope: '*'
    sideEffects: None
    timeoutSeconds: 10
  - admissionReviewVersions:
    - v1
    - v1beta1
    clientConfig:
      caBundle: LS0tLS1CRUdJTiBDRVJUSUZJQ0FURS0tLS0tCk1JSUM2VENDQWRHZ0F3SUJBZ0lCQURBTkJna3Foa2lHOXcwQkFRc0ZBREFXTVJRd0VnWURWUVFERXd0cmRXSmwKZG1seWRDNXBiekFlRncweU1qQXpNVGd3TXpRd05UWmFGdzB5TWpBek1qVXdNelF3TlRaYU1CWXhGREFTQmdOVgpCQU1UQzJ0MVltVjJhWEowTG1sdk1JSUJJakFOQmdrcWhraUc5dzBCQVFFRkFBT0NBUThBTUlJQkNnS0NBUUVBCnJ5WStzaW43bkdpKzdqVk1tQWkyNGh1enZPL0N4NGNjTmxxb2JCcENiVVZPSTlKMkFjdlhJT3d4bHVacVRXdEEKc0tyT0UyemtlV3c5TXQxSGVXT1QyVGNxU0dBVVU4ajNSZ1pFQUk1aHVrRUxQNGR3Z2hPejZCUVljK01xSVlTNwpaSFhMeGI5eVRu [...]
      service:
        name: virt-api
        namespace: harvester-system
        path: /vmipreset-validate
        port: 443
    failurePolicy: Fail
    matchPolicy: Equivalent
    name: virtualmachinepreset-validator.kubevirt.io
    namespaceSelector: {}
    objectSelector: {}
    rules:
    - apiGroups:
      - kubevirt.io
      apiVersions:
      - v1alpha3
      - v1
      operations:
      - CREATE
      - UPDATE
      resources:
      - virtualmachineinstancepresets
      scope: '*'
    sideEffects: None
    timeoutSeconds: 10
  - admissionReviewVersions:
    - v1
    - v1beta1
    clientConfig:
      caBundle: LS0tLS1CRUdJTiBDRVJUSUZJQ0FURS0tLS0tCk1JSUM2VENDQWRHZ0F3SUJBZ0lCQURBTkJna3Foa2lHOXcwQkFRc0ZBREFXTVJRd0VnWURWUVFERXd0cmRXSmwKZG1seWRDNXBiekFlRncweU1qQXpNVGd3TXpRd05UWmFGdzB5TWpBek1qVXdNelF3TlRaYU1CWXhGREFTQmdOVgpCQU1UQzJ0MVltVjJhWEowTG1sdk1JSUJJakFOQmdrcWhraUc5dzBCQVFFRkFBT0NBUThBTUlJQkNnS0NBUUVBCnJ5WStzaW43bkdpKzdqVk1tQWkyNGh1enZPL0N4NGNjTmxxb2JCcENiVVZPSTlKMkFjdlhJT3d4bHVacVRXdEEKc0tyT0UyemtlV3c5TXQxSGVXT1QyVGNxU0dBVVU4ajNSZ1pFQUk1aHVrRUxQNGR3Z2hPejZCUVljK01xSVlTNwpaSFhMeGI5eVRu [...]
      service:
        name: virt-api
        namespace: harvester-system
        path: /migration-validate-create
        port: 443
    failurePolicy: Fail
    matchPolicy: Equivalent
    name: migration-create-validator.kubevirt.io
    namespaceSelector: {}
    objectSelector: {}
    rules:
    - apiGroups:
      - kubevirt.io
      apiVersions:
      - v1alpha3
      - v1
      operations:
      - CREATE
      resources:
      - virtualmachineinstancemigrations
      scope: '*'
    sideEffects: None
    timeoutSeconds: 10
  - admissionReviewVersions:
    - v1
    - v1beta1
    clientConfig:
      caBundle: LS0tLS1CRUdJTiBDRVJUSUZJQ0FURS0tLS0tCk1JSUM2VENDQWRHZ0F3SUJBZ0lCQURBTkJna3Foa2lHOXcwQkFRc0ZBREFXTVJRd0VnWURWUVFERXd0cmRXSmwKZG1seWRDNXBiekFlRncweU1qQXpNVGd3TXpRd05UWmFGdzB5TWpBek1qVXdNelF3TlRaYU1CWXhGREFTQmdOVgpCQU1UQzJ0MVltVjJhWEowTG1sdk1JSUJJakFOQmdrcWhraUc5dzBCQVFFRkFBT0NBUThBTUlJQkNnS0NBUUVBCnJ5WStzaW43bkdpKzdqVk1tQWkyNGh1enZPL0N4NGNjTmxxb2JCcENiVVZPSTlKMkFjdlhJT3d4bHVacVRXdEEKc0tyT0UyemtlV3c5TXQxSGVXT1QyVGNxU0dBVVU4ajNSZ1pFQUk1aHVrRUxQNGR3Z2hPejZCUVljK01xSVlTNwpaSFhMeGI5eVRu [...]
      service:
        name: virt-api
        namespace: harvester-system
        path: /migration-validate-update
        port: 443
    failurePolicy: Fail
    matchPolicy: Equivalent
    name: migration-update-validator.kubevirt.io
    namespaceSelector: {}
    objectSelector: {}
    rules:
    - apiGroups:
      - kubevirt.io
      apiVersions:
      - v1alpha3
      - v1
      operations:
      - UPDATE
      resources:
      - virtualmachineinstancemigrations
      scope: '*'
    sideEffects: None
    timeoutSeconds: 10
  - admissionReviewVersions:
    - v1
    - v1beta1
    clientConfig:
      caBundle: LS0tLS1CRUdJTiBDRVJUSUZJQ0FURS0tLS0tCk1JSUM2VENDQWRHZ0F3SUJBZ0lCQURBTkJna3Foa2lHOXcwQkFRc0ZBREFXTVJRd0VnWURWUVFERXd0cmRXSmwKZG1seWRDNXBiekFlRncweU1qQXpNVGd3TXpRd05UWmFGdzB5TWpBek1qVXdNelF3TlRaYU1CWXhGREFTQmdOVgpCQU1UQzJ0MVltVjJhWEowTG1sdk1JSUJJakFOQmdrcWhraUc5dzBCQVFFRkFBT0NBUThBTUlJQkNnS0NBUUVBCnJ5WStzaW43bkdpKzdqVk1tQWkyNGh1enZPL0N4NGNjTmxxb2JCcENiVVZPSTlKMkFjdlhJT3d4bHVacVRXdEEKc0tyT0UyemtlV3c5TXQxSGVXT1QyVGNxU0dBVVU4ajNSZ1pFQUk1aHVrRUxQNGR3Z2hPejZCUVljK01xSVlTNwpaSFhMeGI5eVRu [...]
      service:
        name: virt-api
        namespace: harvester-system
        path: /virtualmachinesnapshots-validate
        port: 443
    failurePolicy: Fail
    matchPolicy: Equivalent
    name: virtualmachinesnapshot-validator.snapshot.kubevirt.io
    namespaceSelector: {}
    objectSelector: {}
    rules:
    - apiGroups:
      - snapshot.kubevirt.io
      apiVersions:
      - v1alpha1
      operations:
      - CREATE
      - UPDATE
      resources:
      - virtualmachinesnapshots
      scope: '*'
    sideEffects: None
    timeoutSeconds: 10
  - admissionReviewVersions:
    - v1
    - v1beta1
    clientConfig:
      caBundle: LS0tLS1CRUdJTiBDRVJUSUZJQ0FURS0tLS0tCk1JSUM2VENDQWRHZ0F3SUJBZ0lCQURBTkJna3Foa2lHOXcwQkFRc0ZBREFXTVJRd0VnWURWUVFERXd0cmRXSmwKZG1seWRDNXBiekFlRncweU1qQXpNVGd3TXpRd05UWmFGdzB5TWpBek1qVXdNelF3TlRaYU1CWXhGREFTQmdOVgpCQU1UQzJ0MVltVjJhWEowTG1sdk1JSUJJakFOQmdrcWhraUc5dzBCQVFFRkFBT0NBUThBTUlJQkNnS0NBUUVBCnJ5WStzaW43bkdpKzdqVk1tQWkyNGh1enZPL0N4NGNjTmxxb2JCcENiVVZPSTlKMkFjdlhJT3d4bHVacVRXdEEKc0tyT0UyemtlV3c5TXQxSGVXT1QyVGNxU0dBVVU4ajNSZ1pFQUk1aHVrRUxQNGR3Z2hPejZCUVljK01xSVlTNwpaSFhMeGI5eVRu [...]
      service:
        name: virt-api
        namespace: harvester-system
        path: /virtualmachinerestores-validate
        port: 443
    failurePolicy: Fail
    matchPolicy: Equivalent
    name: virtualmachinerestore-validator.snapshot.kubevirt.io
    namespaceSelector: {}
    objectSelector: {}
    rules:
    - apiGroups:
      - snapshot.kubevirt.io
      apiVersions:
      - v1alpha1
      operations:
      - CREATE
      - UPDATE
      resources:
      - virtualmachinerestores
      scope: '*'
    sideEffects: None
    timeoutSeconds: 10
  - admissionReviewVersions:
    - v1
    - v1beta1
    clientConfig:
      caBundle: LS0tLS1CRUdJTiBDRVJUSUZJQ0FURS0tLS0tCk1JSUM2VENDQWRHZ0F3SUJBZ0lCQURBTkJna3Foa2lHOXcwQkFRc0ZBREFXTVJRd0VnWURWUVFERXd0cmRXSmwKZG1seWRDNXBiekFlRncweU1qQXpNVGd3TXpRd05UWmFGdzB5TWpBek1qVXdNelF3TlRaYU1CWXhGREFTQmdOVgpCQU1UQzJ0MVltVjJhWEowTG1sdk1JSUJJakFOQmdrcWhraUc5dzBCQVFFRkFBT0NBUThBTUlJQkNnS0NBUUVBCnJ5WStzaW43bkdpKzdqVk1tQWkyNGh1enZPL0N4NGNjTmxxb2JCcENiVVZPSTlKMkFjdlhJT3d4bHVacVRXdEEKc0tyT0UyemtlV3c5TXQxSGVXT1QyVGNxU0dBVVU4ajNSZ1pFQUk1aHVrRUxQNGR3Z2hPejZCUVljK01xSVlTNwpaSFhMeGI5eVRu [...]
      service:
        name: virt-api
        namespace: harvester-system
        path: /status-validate
        port: 443
    failurePolicy: Fail
    matchPolicy: Equivalent
    name: kubevirt-crd-status-validator.kubevirt.io
    namespaceSelector: {}
    objectSelector: {}
    rules:
    - apiGroups:
      - kubevirt.io
      apiVersions:
      - v1alpha3
      - v1
      operations:
      - CREATE
      - UPDATE
      resources:
      - virtualmachines/status
      - virtualmachineinstancereplicasets/status
      - virtualmachineinstancemigrations/status
      scope: '*'
    sideEffects: None
    timeoutSeconds: 10
- apiVersion: admissionregistration.k8s.io/v1
  kind: ValidatingWebhookConfiguration
  metadata:
    annotations:
      certificates.kubevirt.io/secret: kubevirt-operator-certs
      kubevirt.io/customizer-identifier: 0564c24f745ced6f94bf8fe15c474566be27acf3
      kubevirt.io/generation: "2"
      kubevirt.io/install-strategy-identifier: d3df7f87ee723ed71ca49f6c5cab7566dd4dc500
      kubevirt.io/install-strategy-registry: registry.suse.com/suse/sles/15.3
      kubevirt.io/install-strategy-version: 0.45.0-8.4.3
    creationTimestamp: "2022-03-06T22:52:52Z"
    generation: 5
    labels:
      app.kubernetes.io/component: kubevirt
      app.kubernetes.io/managed-by: kubevirt-operator
      kubevirt.io: virt-operator-validator
    managedFields:
    - apiVersion: admissionregistration.k8s.io/v1
      fieldsType: FieldsV1
      fieldsV1:
        f:metadata:
          f:annotations:
            .: {}
            f:certificates.kubevirt.io/secret: {}
            f:kubevirt.io/customizer-identifier: {}
            f:kubevirt.io/generation: {}
            f:kubevirt.io/install-strategy-identifier: {}
            f:kubevirt.io/install-strategy-registry: {}
            f:kubevirt.io/install-strategy-version: {}
          f:labels:
            .: {}
            f:app.kubernetes.io/component: {}
            f:app.kubernetes.io/managed-by: {}
            f:kubevirt.io: {}
        f:webhooks:
          .: {}
          k:{"name":"kubevirt-update-validator.kubevirt.io"}:
            .: {}
            f:admissionReviewVersions: {}
            f:clientConfig:
              .: {}
              f:caBundle: {}
              f:service:
                .: {}
                f:name: {}
                f:namespace: {}
                f:path: {}
                f:port: {}
            f:failurePolicy: {}
            f:matchPolicy: {}
            f:name: {}
            f:namespaceSelector: {}
            f:objectSelector: {}
            f:rules: {}
            f:sideEffects: {}
            f:timeoutSeconds: {}
          k:{"name":"kubevirt-validator.kubevirt.io"}:
            .: {}
            f:admissionReviewVersions: {}
            f:clientConfig:
              .: {}
              f:caBundle: {}
              f:service:
                .: {}
                f:name: {}
                f:namespace: {}
                f:path: {}
                f:port: {}
            f:failurePolicy: {}
            f:matchPolicy: {}
            f:name: {}
            f:namespaceSelector: {}
            f:objectSelector: {}
            f:rules: {}
            f:sideEffects: {}
            f:timeoutSeconds: {}
      manager: virt-operator
      operation: Update
      time: "2022-03-06T22:52:52Z"
    name: virt-operator-validator
    resourceVersion: "11716325"
    uid: f7b224bd-9c9f-4202-a0ce-193dfc604f81
  webhooks:
  - admissionReviewVersions:
    - v1
    - v1beta1
    clientConfig:
      caBundle: LS0tLS1CRUdJTiBDRVJUSUZJQ0FURS0tLS0tCk1JSUM2VENDQWRHZ0F3SUJBZ0lCQURBTkJna3Foa2lHOXcwQkFRc0ZBREFXTVJRd0VnWURWUVFERXd0cmRXSmwKZG1seWRDNXBiekFlRncweU1qQXpNVGd3TXpRd05UWmFGdzB5TWpBek1qVXdNelF3TlRaYU1CWXhGREFTQmdOVgpCQU1UQzJ0MVltVjJhWEowTG1sdk1JSUJJakFOQmdrcWhraUc5dzBCQVFFRkFBT0NBUThBTUlJQkNnS0NBUUVBCnJ5WStzaW43bkdpKzdqVk1tQWkyNGh1enZPL0N4NGNjTmxxb2JCcENiVVZPSTlKMkFjdlhJT3d4bHVacVRXdEEKc0tyT0UyemtlV3c5TXQxSGVXT1QyVGNxU0dBVVU4ajNSZ1pFQUk1aHVrRUxQNGR3Z2hPejZCUVljK01xSVlTNwpaSFhMeGI5eVRu [...]
      service:
        name: kubevirt-operator-webhook
        namespace: harvester-system
        path: /kubevirt-validate-delete
        port: 443
    failurePolicy: Ignore
    matchPolicy: Equivalent
    name: kubevirt-validator.kubevirt.io
    namespaceSelector: {}
    objectSelector: {}
    rules:
    - apiGroups:
      - kubevirt.io
      apiVersions:
      - v1alpha3
      - v1
      operations:
      - DELETE
      resources:
      - kubevirts
      scope: '*'
    sideEffects: None
    timeoutSeconds: 10
  - admissionReviewVersions:
    - v1
    - v1beta1
    clientConfig:
      caBundle: LS0tLS1CRUdJTiBDRVJUSUZJQ0FURS0tLS0tCk1JSUM2VENDQWRHZ0F3SUJBZ0lCQURBTkJna3Foa2lHOXcwQkFRc0ZBREFXTVJRd0VnWURWUVFERXd0cmRXSmwKZG1seWRDNXBiekFlRncweU1qQXpNVGd3TXpRd05UWmFGdzB5TWpBek1qVXdNelF3TlRaYU1CWXhGREFTQmdOVgpCQU1UQzJ0MVltVjJhWEowTG1sdk1JSUJJakFOQmdrcWhraUc5dzBCQVFFRkFBT0NBUThBTUlJQkNnS0NBUUVBCnJ5WStzaW43bkdpKzdqVk1tQWkyNGh1enZPL0N4NGNjTmxxb2JCcENiVVZPSTlKMkFjdlhJT3d4bHVacVRXdEEKc0tyT0UyemtlV3c5TXQxSGVXT1QyVGNxU0dBVVU4ajNSZ1pFQUk1aHVrRUxQNGR3Z2hPejZCUVljK01xSVlTNwpaSFhMeGI5eVRu [...]
      service:
        name: kubevirt-operator-webhook
        namespace: harvester-system
        path: /kubevirt-validate-update
        port: 443
    failurePolicy: Ignore
    matchPolicy: Equivalent
    name: kubevirt-update-validator.kubevirt.io
    namespaceSelector: {}
    objectSelector: {}
    rules:
    - apiGroups:
      - kubevirt.io
      apiVersions:
      - v1alpha3
      - v1
      operations:
      - UPDATE
      resources:
      - kubevirts
      scope: '*'
    sideEffects: None
    timeoutSeconds: 10
kind: List
metadata:
  resourceVersion: "14658878"
